--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,53 +1,35 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Helvetica, Arial, Sans-Serif, sans-serif;
-    background: gray url(../images/background_01.jpg) no-repeat fixed left top !important;
-    background-size: cover;
-  }
-  
-  .title {
-    padding: 2px;
-    text-overflow-ellipsis: overflow;
-    overflow: hidden;
-    display: block;
-  }
-  
-  .selected-image, .select-video {
-    height: 500px;
-  }
-  
-  .selected-image img, .select-video video {
-    width: 100%;
-    height: 450px;
-  }
-  
-  .image-thumbnail, .video-thumbnail {
-    display: flex;
-    justify-content: space-around;
-    overflow: auto;
-    overflow-y: hidden;
-  }
-  
-  .image-thumbnail img, .video-thumbnail video {
-    width: 70px;
-    height: 70px;
-    padding: 1px;
-    border: 1px solid grey;
-  }
- 
-.caption {
-  word-wrap: break-word;
-}
-.article-header {
-  margin-top: 5px;
-  margin-bottom: 0;
-  font-weight: 400;
-  text-align: justify;
-
-}
-p.source {
-  margin: 10px 0 0;
-  color: gray;
+.btn-search{
+  background-image: linear-gradient(to right, #f5ce62, #e43603, #fa7199, #e85a19);
+      font-size: 12px;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    margin: 20px;
+    height: 34px;
+    text-align: center;
+    border: none;
+    background-size: 300% 100%;
+      moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
 }
 
+.btn-search:hover{
+      background-position: 100% 0;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+
+}
+.powered-by:hover{
+color: #f5ce62 !important;
+}
+
+.article{
+  text-decoration: none !important;
+}
+.article-header:hover , .source:hover{
+  color: #e85a19 !important;
+}
